name:                haskell-json
version:             0.1.0.0
synopsis:            Serving JSON
description:         Serving JSON
homepage:            https://github.com/FranklinChen/rust-vs-ruby
license:             BSD3
license-file:        LICENSE
author:              Franklin Chen
maintainer:          franklinchen@franklinchen.com
copyright:           Franklin Chen
category:            Text
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable haskell-json
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -O2 -Wall
  build-depends:       base >= 3 && < 5
                     , warp
                     , wai
                     , http-types
                     , aeson
                     , text

source-repository head
  type:                 git
  location:             https://github.com/FranklinChen/rust-vs-ruby
